--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,12 +6,16 @@ environment:
 
 dependencies:
   collection: any
-  isar: ^3.0.0
+  isar:
+    version: ">=3.0.0"
+    hosted: https://pub.isar-community.dev/
   meta: any
 
 dev_dependencies:
   build_runner: ^2.3.2
-  isar_generator: ^3.0.0
+  isar_generator:
+    version: ">=3.0.0"
+    hosted: https://pub.isar-community.dev/
   lints: ^2.0.1
   mockito: ^5.4.0
   path: ^1.8.3
